# ems_project

./: .gitignore  CMakeLists.txt  README.md  ems  gemini_assistant.py  seed_attendance.sql  seed_employees.sql  streamlit_assistant.py
src/: AiAssistant.cpp  AiAssistant.h  AttendanceManager.cpp  AttendanceManager.h  Database.cpp  Database.h  EmployeeManager.cpp  EmployeeManager.h  SalaryManager.cpp  SalaryManager.h  main.cpp
